--- a/DA_Xuong/appsettings.json
+++ b/DA_Xuong/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PMD\\SQLEXPRESS;Database=QUANLYBANSACH;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=QUANLYBANSACH;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 
 }
